apps/aegis-postgres/base/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: aegis-postgres
  labels:
    app.kubernetes.io/component: database
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: ingress
      sectionName: aegis-postgres
  rules:
    - backendRefs:
        - name: postgres-rw
          port: 5432
